--- a/android/res/layout/hr_belt.xml
+++ b/android/res/layout/hr_belt.xml
@@ -6,7 +6,7 @@
     >
     <Button
         android:id="@id/buttonPrefs" 
-        android:text="@string/settings"
+        android:text="@string/connect"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         />
