--- a/android/res/layout/prefs.xml
+++ b/android/res/layout/prefs.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:orientation="vertical"
     >
-    <Button
-        android:id="@id/buttonPrefs" 
-        android:text="@string/settings"
+    <ListView
+        android:id="@android:id/list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         />
+    <Button
+        android:id="@+id/buttonUpdate" 
+        android:text="@string/update"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        />
 </LinearLayout>
+
 
