--- a/android/res/xml/prefs.xml
+++ b/android/res/xml/prefs.xml
@@ -42,22 +42,27 @@
         android:title="@string/zones"
         android:persistent="false"
         >
+        <CheckBoxPreference
+            android:title="@string/title_auto_calculate"
+            android:summary="@string/summary_auto_calculate"
+            android:key="auto_calculate"
+            android:defaultValue="true"
+            android:disableDependentsState="true"
+            />
         <EditTextPreference
             android:title="@string/title_moderate_zone_high" 
             android:summary="@string/summary_moderate_zone_high" 
             android:key="moderate_zone_high"
             android:numeric="integer"
+            android:dependency="auto_calculate"
             />
         <EditTextPreference
             android:title="@string/title_moderate_zone_low" 
             android:summary="@string/summary_moderate_zone_low" 
             android:key="moderate_zone_low"
             android:numeric="integer"
+            android:dependency="auto_calculate"
             />
-        <Preference
-            android:title="@string/title_auto_calculate"
-            android:summary="@string/summary_auto_calculate"
-            android:key="auto_calculate" />
     </PreferenceScreen>
     <PreferenceScreen
         android:key="button_hr_belt_category_key"
