--- a/android/app/res/layout/main.xml
+++ b/android/app/res/layout/main.xml
@@ -4,6 +4,11 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
+    <TextView
+        android:id="@id/textMessage" 
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        />
     <Button
         android:id="@id/buttonPrefs" 
         android:text="@string/settings"
