--- a/android/app/res/xml/prefs_audio.xml
+++ b/android/app/res/xml/prefs_audio.xml
@@ -3,13 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     >
     <CheckBoxPreference
-        android:key="zone_warnings"
-        android:title="@string/title_enable_zone_warnings"
-        android:summary="@string/summary_enable_zone_warnings"
+        android:key="@string/zone_warnings"
+        android:title="@string/title_zone_warnings"
+        android:summary="@string/summary_zone_warnings"
         android:defaultValue="true"
         />
     <CheckBoxPreference
-        android:key="hr_audio_feedback"
+        android:key="@string/hr_audio_feedback"
         android:title="@string/title_hr_audio_feedback"
         android:summary="@string/summary_hr_audio_feedback"
         android:defaultValue="true"
