--- a/android/app/res/layout/main.xml
+++ b/android/app/res/layout/main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/screen"
+    style="@style/Screen"
     >
     <TextView
         android:id="@id/textMessage" 
